@@ -1,4 +1,8 @@
-﻿zg 31.07.2015 15:36:58 +0200 - build 4406
+﻿drkns 14.08.2015 22:33:52 +0200 - build 4407
+
+1. 0003056: При отметке файлов левой панели - "портится" разделитель панелей
+
+zg 31.07.2015 15:36:58 +0200 - build 4406
 
 1. с форума: ищу файлы (маска любая), из найденных выбираю любой, находящийся не в текущей папке, 
    и жму на нём F4. Если в открывшемся редакторе нажать Ctrl-F10, то отобразятся панели.
